--- a/app/src/main/res/layout/activity_phone_verify.xml
+++ b/app/src/main/res/layout/activity_phone_verify.xml
@@ -14,7 +14,7 @@
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/ic_logo"
+        android:src="@drawable/ic_logo_21"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="@dimen/margin_12"
-            android:text="@string/login_phone_verify"
+            android:text="@string/btn_login"
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize30sp"
             android:textStyle="bold"
