--- a/app/src/main/res/drawable/icon_bell.xml
+++ b/app/src/main/res/drawable/icon_bell.xml
@@ -1,23 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="30dp"
-    android:height="30dp"
-    android:viewportWidth="30"
-    android:viewportHeight="30">
-  <group>
-    <clip-path
-        android:pathData="M0,0h30v30h-30z"/>
-    <path
-        android:pathData="M23.846,7C25.312,7 26.5,8.194 26.5,9.667L26.5,20.333C26.5,21.806 25.312,23 23.846,23L6.154,23C4.688,23 3.5,21.806 3.5,20.333L3.5,9.667C3.5,8.194 4.688,7 6.154,7L23.846,7ZM23.846,8.333L6.154,8.333C5.464,8.333 4.897,8.862 4.833,9.538L4.827,9.667L4.827,20.333C4.827,21.026 5.353,21.596 6.026,21.661L6.154,21.667L23.846,21.667C24.536,21.667 25.103,21.138 25.167,20.462L25.173,20.333L25.173,9.667C25.173,8.974 24.647,8.404 23.974,8.339L23.846,8.333Z"
-        android:strokeWidth="0.2"
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:strokeColor="#FFFFFF"/>
-    <path
-        android:pathData="M5.266,7.562L14.533,14.541C14.773,14.722 15.094,14.745 15.355,14.608L15.45,14.549L25.227,7.453L26.004,8.534L16.226,15.63C15.528,16.137 14.598,16.161 13.878,15.706L13.737,15.608L3.949,8.245L5.266,7.562Z"
-        android:strokeWidth="0.2"
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:strokeColor="#FFFFFF"/>
-
-  </group>
+    android:width="23dp"
+    android:height="22dp"
+    android:viewportWidth="23"
+    android:viewportHeight="22">
+  <path
+      android:pathData="M11.83,2C6.763,2 2.66,6.024 2.66,11C2.66,14.886 0.829,17.089 0.064,18.884C-0.161,19.413 0.235,20 0.821,20L11.839,20L11.843,20C16.901,19.993 21,15.974 21,11C21,6.026 16.898,2 11.83,2ZM11.83,18.389L2.138,18.389C3.261,16.299 4.3,14.193 4.3,11C4.3,6.925 7.678,3.611 11.83,3.611C15.982,3.611 19.359,6.925 19.359,11C19.359,15.075 15.982,18.389 11.83,18.389ZM15.926,9.394C15.926,9.839 15.559,10.2 15.106,10.2L8.543,10.2C8.09,10.2 7.723,9.839 7.723,9.394C7.723,8.95 8.09,8.589 8.543,8.589L15.106,8.589C15.559,8.589 15.926,8.95 15.926,9.394ZM12.645,12.616C12.645,13.061 12.278,13.421 11.825,13.421L8.543,13.421C8.09,13.421 7.723,13.061 7.723,12.616C7.723,12.171 8.09,11.811 8.543,11.811L11.825,11.811C12.278,11.811 12.645,12.171 12.645,12.616Z"
+      android:strokeWidth="1"
+      android:fillColor="#FFFFFF"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
 </vector>
