--- a/app/src/main/res/drawable/bg_gradient_bet_info_title_foreground.xml
+++ b/app/src/main/res/drawable/bg_gradient_bet_info_title_foreground.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#E7F1FF" />
+    <solid android:color="@color/color_232426_E7F1FF" />
     <corners
         android:topLeftRadius="14dp"
         android:topRightRadius="14dp" />
