--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -93,6 +93,10 @@
     <color name="color_909090">#909090</color>
     <color name="color_9D9D9D">#9D9D9D</color>
     <color name="color_BBBBBB">#BBBBBB</color>
+    <color name="color_9CC7FF">#9CC7FF</color>
+    <color name="color_171E26">#171E26</color>
+    <color name="color_E7F1FF">#E7F1FF</color>
+    <color name="color_232426">#232426</color>
     <!--以下部分，是系统中的白天的色值 -->
     <!--命名規則，color_[夜間色碼]_[白天色碼] -->
 
@@ -108,6 +112,8 @@
     <color name="color_404348_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_FFFFFF_0760D4">@color/color_0760D4</color>
     <color name="color_0760D4_0760D4">@color/color_0760D4</color>
+    <color name="color_171E26_9CC7FF">@color/color_9CC7FF</color>
+    <color name="color_232426_E7F1FF">@color/color_E7F1FF</color>
 
     <color name="color_FF9E3C_FF9E3C">@color/color_FF9E3C</color>
     <color name="color_FF9143_ff9200">@color/color_ff9200</color>
