--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,13 +18,15 @@
         android:layout_height="wrap_content"
         android:overScrollMode="never">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/color_1E1E1E_FFFFFF"
-            android:divider="@drawable/divider_straight"
-            android:orientation="vertical"
-            android:showDividers="middle">
+            android:layout_marginTop="10dp"
+            android:background="@color/color_CAE0FF_FCFCFC"
+            android:orientation="vertical">
+
+
 
             <LinearLayout
                 android:id="@+id/btn_head"
@@ -32,14 +34,15 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:minHeight="48dp"
+
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
-                    android:layout_marginStart="18dp"
                     android:text="@string/avatar"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize14sp" />
@@ -62,6 +65,12 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="14dp"
+                android:background="@color/color_212121_eeeeee" />
+
             <LinearLayout
                 android:id="@+id/btn_nickname"
                 android:layout_width="match_parent"
@@ -71,14 +80,13 @@
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/nickname"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:layout_marginStart="18dp"
                     android:textSize="@dimen/textSize14sp" />
 
                 <TextView
@@ -90,7 +98,7 @@
                     android:ellipsize="end"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textColor="@color/color_939393_999999"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="ia***18" />
 
@@ -108,6 +116,12 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="14dp"
+                android:background="@color/color_212121_eeeeee" />
+
             <LinearLayout
                 android:id="@+id/btn_pwd_setting"
                 android:layout_width="match_parent"
@@ -117,15 +131,14 @@
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
                     android:text="@string/password_setting"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:layout_marginStart="18dp"
                     android:textSize="@dimen/textSize14sp" />
 
                 <ImageView
@@ -137,22 +150,27 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/color_141414_F3F4F5" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:minHeight="44dp"
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/member_account_in_profile"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:layout_marginStart="18dp"
                     android:textSize="@dimen/textSize14sp" />
 
                 <TextView
@@ -164,11 +182,17 @@
                     android:ellipsize="end"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textColor="@color/color_939393_999999"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="ianlee0518" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="14dp"
+                android:background="@color/color_212121_eeeeee" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -180,9 +204,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/id"
-                    android:layout_marginStart="18dp"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize14sp" />
 
@@ -195,11 +219,17 @@
                     android:ellipsize="end"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textColor="@color/color_939393_999999"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="235291" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="14dp"
+                android:background="@color/color_212121_eeeeee" />
 
             <LinearLayout
                 android:id="@+id/ll_real_name"
@@ -210,14 +240,13 @@
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/real_name"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:layout_marginStart="18dp"
                     android:textSize="@dimen/textSize14sp" />
 
                 <TextView
@@ -229,7 +258,7 @@
                     android:ellipsize="end"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textColor="@color/color_939393_999999"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="ianlee051**" />
 
@@ -246,6 +275,10 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/color_141414_F3F4F5" />
             <!--  QQ號碼  -->
             <LinearLayout
                 android:id="@+id/ll_qq_number"
@@ -256,14 +289,13 @@
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/qq_number"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:layout_marginStart="18dp"
                     android:textSize="@dimen/textSize14sp" />
 
                 <TextView
@@ -275,7 +307,7 @@
                     android:ellipsize="end"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textColor="@color/color_939393_999999"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="1022423383" />
 
@@ -292,6 +324,12 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="14dp"
+                android:background="@color/color_212121_eeeeee" />
+
             <!--  郵箱  -->
             <LinearLayout
                 android:id="@+id/ll_e_mail"
@@ -302,14 +340,13 @@
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/e_mail"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:layout_marginStart="18dp"
                     android:textSize="@dimen/textSize14sp" />
 
                 <TextView
@@ -321,7 +358,7 @@
                     android:ellipsize="end"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textColor="@color/color_939393_999999"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="ianlee051＠gmail.com" />
 
@@ -338,6 +375,12 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="14dp"
+                android:background="@color/color_212121_eeeeee" />
+
             <!--  手機號碼  -->
             <LinearLayout
                 android:id="@+id/ll_phone_number"
@@ -348,14 +391,13 @@
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/phone_number"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:layout_marginStart="18dp"
                     android:textSize="@dimen/textSize14sp" />
 
                 <TextView
@@ -367,7 +409,7 @@
                     android:ellipsize="end"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textColor="@color/color_939393_999999"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="1022423383" />
 
@@ -384,6 +426,12 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="14dp"
+                android:background="@color/color_212121_eeeeee" />
+
             <!--  微信  -->
             <LinearLayout
                 android:id="@+id/ll_wechat"
@@ -394,14 +442,13 @@
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/we_chat"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:layout_marginStart="18dp"
                     android:textSize="@dimen/textSize14sp" />
 
                 <TextView
@@ -413,7 +460,7 @@
                     android:ellipsize="end"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textColor="@color/color_939393_999999"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="2443875459" />
 
@@ -430,6 +477,11 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/color_141414_F3F4F5" />
+
             <LinearLayout
                 android:id="@+id/ll_verified"
                 android:layout_width="match_parent"
@@ -439,14 +491,13 @@
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
                     android:layout_marginEnd="4dp"
                     android:text="@string/identity"
                     android:textColor="@color/color_BBBBBB_333333"
-                    android:layout_marginStart="18dp"
                     android:textSize="@dimen/textSize14sp" />
 
                 <TextView
@@ -455,8 +506,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="6dp"
                     android:layout_weight="1"
-                    android:text="@string/not_verify"
                     android:gravity="end"
+                    android:text="@string/not_verify"
                     android:textAlignment="textEnd"
                     android:textColor="@color/color_E44438_e44438"
                     android:textSize="@dimen/textSize12sp" />
